@@ -967,4 +967,5 @@ FX_ImageSpinner_Pause(void)
 	paused = 0;
      }
 }
+
 /****************************************************************************/
