@@ -330,6 +330,7 @@
 #define __A_SKIPTASK 99
 #define __A_SKIPWINLIST 100
 #define __A_NEVERFOCUS 101
+#define __A_SKIPLISTS 102
 
 #define __MODIFIER_KEY 101
 #define __TYPE 102
